Added grid flow block to case studies page.

--- a/flowblocks/grid_tile.ini
+++ b/flowblocks/grid_tile.ini
@@ -1,11 +1,15 @@
 [block]
-name = Infographic
+name = Grid Tile
 
 [fields.title]
-label = Infographic Title
+label = Title
 type = string
 
+[fields.description]
+label = Description
+type = text
+
 [fields.image_url]
-label = Infographic Image
+label = Image
 type = select
 source = record.attachments.images
