--- a/models/case_studies.ini
+++ b/models/case_studies.ini
@@ -2,7 +2,7 @@
 name = Case Studies
 inherits = page
 
-[fields.infographic]
-name = Infographic
+[fields.sections]
+name = Sections
 type = flow
-flow_blocks = infographic
+flow_blocks = infographic, grid
