Clients server macro, Flexslider, tailored, and testimonial flow blocks.

--- a/models/case_studies.ini
+++ b/models/case_studies.ini
@@ -5,4 +5,4 @@ inherits = page
 [fields.sections]
 name = Sections
 type = flow
-flow_blocks = infographic, grid
+flow_blocks = infographic, grid, flexslider, tailored
