Refactored to a single model (page).

--- a/models/page.ini
+++ b/models/page.ini
@@ -2,6 +2,10 @@
 name = Page
 label = {{ this.title }}
 
+[fields.class]
+label = Class
+type = string
+
 [fields.title]
 label = Title
 type = string
@@ -13,3 +17,13 @@ type = string
 [fields.description]
 label = Description
 type = text
+
+[fields.sections]
+name = Sections
+type = flow
+flow_blocks = infographic, grid, flexslider, tailored
+
+[fields.show_clients]
+name = Show Clients
+type = boolean
+default = false
