Capabilities page with flow blocks for specialized grid.

--- a/models/page.ini
+++ b/models/page.ini
@@ -3,8 +3,10 @@ name = Page
 label = {{ this.title }}
 
 [fields.class]
-label = Class
-type = string
+label = Page Type
+type = select
+choices = capabilities, case-studies
+choice_labels = Capabilities, Case Studies
 
 [fields.title]
 label = Title
@@ -21,7 +23,7 @@ type = text
 [fields.sections]
 name = Sections
 type = flow
-flow_blocks = infographic, grid, flexslider, tailored
+flow_blocks = infographic, grid, flexslider, tailored, capabilities
 
 [fields.show_clients]
 name = Show Clients
