Final HTML build. Home page setup with flow blocks needed.

--- a/models/page.ini
+++ b/models/page.ini
@@ -2,28 +2,14 @@
 name = Page
 label = {{ this.title }}
 
-[fields.class]
-label = Page Type
-type = select
-choices = capabilities, case-studies
-choice_labels = Capabilities, Case Studies
-
 [fields.title]
 label = Title
 type = string
 
-[fields.header]
-label = Header
-type = string
-
-[fields.description]
-label = Description
-type = text
-
 [fields.sections]
 name = Sections
 type = flow
-flow_blocks = infographic, grid, flexslider, tailored, capabilities
+flow_blocks = hero, banner, infographic, grid, flexslider, tailored, capabilities, solutions, mcg, carousel
 
 [fields.show_clients]
 name = Show Clients
